--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=banca
+spring.data.mongodb.database=test
 spring.data.mongodb.host=localhost
