Ready to part 2 of the proyect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=test
 spring.data.mongodb.host=localhost
 server.port=8081
+springdoc.api-docs.path=/api
+springdoc.swagger-ui.path=/swagger-ui.html
+
+apis.cliente=http://cliente.localhost:8080/api/v1/client/
