--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ server.port=8081
 springdoc.api-docs.path=/api
 springdoc.swagger-ui.path=/swagger-ui.html
 
-apis.cliente=http://cliente.localhost:8080/api/v1/client/
+apis.cliente=http://localhost:8080/api/v1/client/
