--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
+spring.application.name= cuenta
+server.port=809\
+  1
+spring.config.import=optional:configserver:http://localhost:8888
+#spring.profiles.active=dev
+
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=test
 spring.data.mongodb.host=localhost
-server.port=8081
+
 springdoc.api-docs.path=/api
 springdoc.swagger-ui.path=/swagger-ui.html
 
-apis.cliente=http://localhost:8080/api/v1/client/
+apis.cliente=http://localhost:8090/api/v1/client/
+apis.credit=http://localhost:8092/api/v1/clientcredit/
