Add new features about debitCard and logic to new debitCard and use it

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,12 @@ spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=test
 spring.data.mongodb.host=localhost
+spring.data.mongodb.auto-index-creation=true
 
 springdoc.api-docs.path=/api
 springdoc.swagger-ui.path=/swagger-ui.html
+
+
 
 apis.cliente=http://localhost:8090/api/v1/client/
 apis.credit=http://localhost:8092/api/v1/clientcredit/
